--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,6 +1,33 @@
 body {
-	margin: 20px;
 	background-color:  #02010a;
-	color: white;
 	font-family: 'Dancing Script', cursive;
+}
+img {
+  box-shadow: 2px #02010a;
+}
+.contenido {
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+}
+.contenido div{
+  box-sizing: border-box;
+	min-width: 150px;
+	padding: 20px;
+}
+.contenido {
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cabecera {
+  background-color: #5b7989;
+  color: white;
+  text-align: left;
+  border-radius: 10px 10px 0 0;
+}
+.menu-pricipal {
+  color: white;
+  text-align: right;
 }
