--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -13,21 +13,29 @@ img {
 .contenido div{
   box-sizing: border-box;
 	min-width: 150px;
-	padding: 20px;
+	padding: 10px;
 }
 .contenido {
   width: 900px;
   margin-left: auto;
   margin-right: auto;
 }
-
 .cabecera {
+  display: flex;
+  align-items: baseline;
   background-color: #5b7989;
   color: white;
-  text-align: left;
   border-radius: 10px 10px 0 0;
 }
-.menu-pricipal {
+.cabecera h1{
+  width: 70%;
+}
+.cabecera h1{
+  text-shadow: 2px 2px black;
+}
+
+#menu-pricipal a{
+  width: 30%;
   color: white;
-  text-align: right;
+
 }
