--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -14,9 +14,7 @@ img {
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-
 }
-
 
 .cabecera {
   display: flex;
@@ -56,36 +54,37 @@ img {
 }
 
 #izquierda {
+	margin: 20px;
 	max-width: 40%;
 }
 #derecha {
+	margin: 20px;
 	max-width: 40%;
 }
 
 #secundaria {
-margin: 0 auto;
-align-items:center;
-text-align: center;
-background-color: #d5c75f;
-height: 100%;
-width: 100%;
-}
-
-#izquierda #derecha {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	align-items: center;
+	text-align: center;
+	background-color: #d5c75f;
+	width: 100%
 }
 
 #seundaria  #izquierda {
+	align-items: center;
 	text-align: center;
-	float: left;
-	margin-top: 10px;
 	width: 50%;
 }
-#secundaria  #derecha {
+#seundaria  #derecha {
+	align-items: center;
 	text-align: center;
-	float: right;
-	margin-top: 10px;
-	margin-right: 60px;
 	width: 50%;
+}
+#izquierda {
+	transition-property: transform;
+	transition-duration: 1s;
+}
+#izquierda:hover {
+	transform: rotate(10deg);
 }
